--- a/src/style/default.css
+++ b/src/style/default.css
@@ -2,3 +2,9 @@ html, body {
   margin: 0;
   padding: 0;
 }
+
+html {
+  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+}
