--- a/src/style/components/input.css
+++ b/src/style/components/input.css
@@ -6,7 +6,7 @@
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   font-size: 14px;
   line-height: 1.2;
-  padding: .7em 1em;
+  padding: 12px;
 }
 
 .srm-input:focus {
