init data from storage by events

--- a/src/empty-history/style.css
+++ b/src/empty-history/style.css
@@ -6,13 +6,16 @@
 .srm-empty-history__icon {
   display: inline-block;
   height: 44px;
-  margin-right: 12px;
   vertical-align: middle;
   width: 44px;
 }
 
 .srm-empty-history__text {
+  box-sizing: border-box;
   display: inline-block;
   line-height: 1.4;
+  margin-left: -52px;
+  padding-left: 62px;
   vertical-align: middle;
+  width: 100%;
 }
