--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -7,7 +7,7 @@
 }
 
 .srm-layout__search-box {
-  height: 58px;
+  height: 54px;
   left: 0;
   padding: 16px 16px 0 16px;
   position: absolute;
@@ -16,12 +16,13 @@
 }
 
 .srm-layout__history {
-  height: 60px;
+  height: 64px;
   left: 16px;
   overflow-x: auto;
   position: absolute;
   right: 16px;
-  top: 74px;
+  text-align: center;
+  top: 70px;
 }
 
 .srm-layout__map {
@@ -29,7 +30,7 @@
   left: 0;
   position: absolute;
   right: 0;
-  top: 134px;
+  top: 138px;
 }
 
 @media (min-width: 960px) {
@@ -38,15 +39,16 @@
     bottom: 0;
     height: auto;
     right: auto;
-    padding-left: 8px;
-    padding-right: 12px;
+    padding-right: 16px;
+    text-align: left;
+    top: 78px;
     width: 200px;
   }
 
   .srm-layout__map {
-    left: 228px;
+    left: 232px;
     right: 16px;
-    top: 74px;
+    top: 78px;
   }
 
 }
