--- a/src/history-toggle/style.css
+++ b/src/history-toggle/style.css
@@ -11,16 +11,48 @@
 }
 
 .srm-history-toggle__icon {
-  height: 36px;
-  left: 50%;
-  margin: -18px 0 0 -18px;
+  height: 32px;
+  left: 0;
+  margin-top: -16px;
   position: absolute;
   top: 50%;
   transition: transform 250ms;
-  width: 36px;
+  width: 32px;
+}
+
+.srm-history-toggle_close::after,
+.srm-history-toggle_open::after {
+  border-style: solid;
+  content: '';
+  display: block;
+  height: 0;
+  left: 40px;
+  position: absolute;
+  top: 18px;
+  width: 0;
+}
+
+.srm-history-toggle_close::after {
+  border-width: 0 5px 6px 5px;
+  border-color: transparent transparent #000 transparent;
+}
+
+.srm-history-toggle_open::after {
+  border-width: 6px 5px 0 5px;
+  border-color: #000 transparent transparent transparent;
 }
 
 .srm-history-toggle_tease .srm-history-toggle__icon,
-.srm-history-toggle:hover .srm-history-toggle__icon {
-  transform: scale(1.2);
+.srm-history-toggle:focus .srm-history-toggle__icon {
+  transform: scale(1.1);
+}
+
+.srm-history-toggle:active {
+  transform: translateY(2px);
+}
+
+@media (min-width: 1200px) {
+  .srm-history-toggle:hover .srm-history-toggle__icon {
+    transform: scale(1.1);
+  }
 }
