--- a/src/icons/list-icon.css
+++ b/src/icons/list-icon.css
@@ -1,5 +1,6 @@
 .srm-list-icon {
   background-image: url('./list-icon.svg');
+  background-repeat: no-repeat;
   background-size: 100% 100%;
   display: inline-block;
   height: 24px;
